<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/sliderView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:sliderScrollTimeInSec="2"
                    app:sliderAnimationDuration="750"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5858"
                    app:sliderIndicatorUnselectedColor="#c1c1c1"
                    app:sliderStartAutoCycle="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_clg"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/darkColor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dept"
                        android:layout_marginTop="@dimen/text_margin"
                        android:textSize="@dimen/title_size"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#fff"
                        android:fontFamily="@string/bold"/>
                    
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#fff"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Computer Science"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:layout_margin="8dp"
                                android:textStyle="bold"
                                android:fontFamily="@string/light"/>
                            
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Mathematics"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:layout_margin="8dp"
                                android:textStyle="bold"
                                android:fontFamily="@string/light"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Statistics"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:layout_margin="8dp"
                                android:textStyle="bold"
                                android:fontFamily="@string/light"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Microbiology"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:layout_margin="8dp"
                                android:textStyle="bold"
                                android:fontFamily="@string/light"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Physics"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:layout_margin="8dp"
                                android:textStyle="bold"
                                android:fontFamily="@string/light"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Economics"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:layout_margin="8dp"
                                android:textStyle="bold"
                                android:fontFamily="@string/light"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:layout_marginTop="36dp"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@string/light"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clg_address"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@string/light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="#D6D3D3"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/mail" />
                        <TextView
                            android:id="@+id/kalyaniMail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kly_mail"
                            android:textSize="@dimen/text_size1"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/facebook" />
                        <TextView
                            android:id="@+id/kalyaniFb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kly_name"
                            android:layout_gravity="center"
                            android:textSize="@dimen/text_size1"
                            android:layout_marginStart="10dp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/chrome" />
                        <TextView
                            android:id="@+id/kalyaniWeb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kly_web"
                            android:layout_gravity="center"
                            android:textSize="@dimen/text_size1"
                            android:layout_marginStart="10dp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="230dp"
                    android:src="@drawable/clglocation"
                    android:id="@+id/map"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>